# reusable-fastapi

./: .gitignore  README.md  const.py  database.py  models.py  pyproject.toml
app/: models.py
app/alembic/: env.py
app/alembic/versions/: 85e33e4c445e_.py  f6d5a168d4df_.py
app/api/: deps.py  main.py
app/api/routes/: login.py  posts.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: post_crud.py  user_crud.py
app/schemas/: common_schema.py  post_schema.py  token_schema.py  user_schema.py
